修改端口号, 开始主页修改尝试

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -5,3 +5,276 @@ body {
   background-size: cover;
   /*overflow: hidden;*/
 }
+address, article, aside, b, caption, cite, code, dd, del, details, div, dl, dt, em, fieldset, figcaption, figure, footer, form, h2, h3, h4, h5, h6, header, hgroup, i, input, legend, li, nav, ol, p, pre, section, select, strong, summary, table, tbody, td, textarea, tfoot, th, thead, ul {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  font-style: normal;
+  font-weight: 400;
+  word-wrap: break-word;
+  outline: 0
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
+  display: block
+}
+
+table {
+  border-collapse: collapse;
+  table-layout: fixed
+}
+
+li {
+  list-style: none
+}
+
+img {
+  border: 0
+}
+
+input, select, textarea {
+  background: #fff;
+  font-family: inherit;
+  resize: none
+}
+
+input[type=button], input[type=reset], input[type=submit] {
+  -webkit-appearance: none
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+  outline: 0
+}
+
+a:hover {
+  color: #419cff;
+  text-decoration: none
+}
+
+.clearfix, .g-clearfix, .ym-clearfix {
+  *zoom: 1
+}
+
+.clearfix:after, .g-clearfix:after, .ym-clearfix:after {
+  content: "";
+  height: 0;
+  overflow: hidden;
+  clear: both;
+  display: block;
+  visibility: hidden
+}
+
+.lesson-table {
+  color: #99b5c0;
+  color: #fff;
+  background: #21282e;
+  height: 46px;
+  line-height: 46px;
+  text-align: center;
+  font-size: 16px
+}
+
+.lesson-table-list {
+  border-top: 1px solid #36464e;
+  margin-bottom: 20px
+}
+
+.lesson-table-list .table-item {
+  border-bottom: 1px solid #36464e
+}
+
+.lesson-table-list .table-item a {
+  display: block;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  font-size: 16px;
+  color: #99b5c0
+}
+
+.lesson-table-list .table-item a:hover {
+  background: #21282e
+}
+
+.lesson-table-list .table-current {
+  border-left: 2px solid #ffe84a;
+  background: #21282e
+}
+
+.lesson-concat {
+  color: #99b5c0;
+  text-align: center;
+  padding-bottom: 20px;
+  font-size: 12px
+}
+
+.lesson-concat .lesson-qrcode {
+  display: block;
+  width: 145px;
+  min-height: 145px;
+  margin: 0 auto 3px
+}
+
+.lesson-concat .lesson-tip {
+  margin-bottom: 10px
+}
+
+.lesson-concat .lesson-group {
+  margin-bottom: 3px
+}
+
+.lessons-wrapper {
+  box-sizing: border-box;
+  padding: 20px 20px 0;
+  height: 100%
+}
+
+.lessons-inner {
+  height: 100%;
+  background: #fff;
+  overflow-y: auto
+}
+
+.lessons-tile {
+  height: 55px;
+  line-height: 55px;
+  padding-left: 20px;
+  border-bottom: 1px solid #ededef;
+  font-size: 16px
+}
+
+.lessons-list {
+  padding: 20px
+}
+
+.lessons-item {
+  border: 1px solid #ededef;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  cursor: pointer
+}
+
+.lessons-item a {
+  position: relative;
+  display: block;
+  padding-right: 100px
+}
+
+.lessons-item:hover {
+  border: 1px solid #76aaff;
+  box-shadow: 0 0 3px #76aafe
+}
+
+.lessons-item:hover .lessons-operate .enter-class {
+  display: block
+}
+
+.lessons-item:hover .info-tile {
+  color: #333
+}
+
+.lessons-item .lessons-pic {
+  float: left;
+  width: 240px;
+  height: 200px;
+  overflow: hidden
+}
+
+.lessons-item .lessons-pic img {
+  border-radius: 3px 0 0 3px
+}
+
+.lessons-item .lessons-info {
+  float: left;
+  min-height: 200px;
+  padding-left: 20px
+}
+
+.lessons-item .info-tile {
+  padding: 30px 0;
+  font-size: 24px
+}
+
+.lessons-item .lessons-live {
+  font-size: 14px;
+  color: #999;
+  margin-bottom: 20px
+}
+
+.lessons-item .lessons-live .space {
+  padding-right: 15px;
+  border-right: 1px solid #d9d9d9;
+  margin-right: 15px
+}
+
+.lessons-item .lessons-complete {
+  color: #c7c7c7
+}
+
+.lessons-item .lessons-complete .space {
+  padding-right: 20px;
+  margin-right: 20px;
+  border-right: 1px solid #d9d9d9
+}
+
+.lessons-item .lessons-operate {
+  position: absolute;
+  height: 180px;
+  width: 100px;
+  right: 20px;
+  top: 10px;
+  text-align: right
+}
+
+.lessons-item .lessons-operate .status {
+  display: inline-block;
+  width: 50px;
+  height: 20px;
+  color: #fff;
+  border-radius: 3px;
+  text-align: center
+}
+
+.lessons-item .lessons-operate .being {
+  background: #06ab3d
+}
+
+.lessons-item .lessons-operate .before {
+  background: #81b2ff
+}
+
+.lessons-item .lessons-operate .over {
+  background: #ffa4a4
+}
+
+.lessons-item .lessons-operate .experitate {
+  background: #d4d4d4
+}
+
+.lessons-item .lessons-operate .enter-class {
+  display: none;
+  position: absolute;
+  top: 50%;
+  margin-top: -13px;
+  right: 0;
+  height: 24px;
+  line-height: 24px;
+  color: #4c91ff;
+  font-size: 24px
+}
+
+.lessons-item .lessons-operate .withdraw {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  color: #999;
+  font-size: 12px
+}
+
+@media screen and (max-width: 1280px) {
+  .lessons-item .lessons-pic {
+    display: none
+  }
+}
