信息中心功能基本恢复

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -3,9 +3,12 @@
 //  background-image: url("/static/img/background.jpg");
 //  background-size: cover;
 //}
+.badge{
+  line-height: 1.5;
+}
 
 legend {
-  font-size: 17px;
+  font-size: 15px;
 }
 
 .clearfix, .g-clearfix, .ym-clearfix {
