识别码功能完善，表格完成。 开始完善发送功能。

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -3,7 +3,12 @@
 //  background-image: url("/static/img/background.jpg");
 //  background-size: cover;
 //}
-.badge{
+
+.btn {
+  color: white;
+}
+
+.badge {
   line-height: 1.5;
 }
 
