修改侧边的菜单栏的缩放功能

--- a/scss/core/_sidebar.scss
+++ b/scss/core/_sidebar.scss
@@ -347,7 +347,7 @@
       z-index: $zindex-sticky - 1;
 
       .sidebar-nav {
-        overflow: visible;
+        //overflow: visible;
         @include sidebar-width($sidebar-borders, $sidebar-minimized-width);
       }
 
