修改导师管理页面

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -5,7 +5,8 @@
 }
 
 legend {
-  font-size: 14px;
+  font-size: 13px;
+  margin-top: 0.4rem !important;
 }
 
 .clearfix, .g-clearfix, .ym-clearfix {
