修改课程的时间控件， 将.bak移入bak文件夹， 移除laydate。

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -241,7 +241,7 @@ legend {
 }
 
 .el-input--mini .el-input__inner{
-  height: 15px;
+  height: 18px;
   flex: 1;
   border-radius: 0;
   border-color: white;
@@ -258,4 +258,8 @@ legend {
 .el-input--mini .el-input__inner::placeholder {
   color: black;
   opacity: 1;
+}
+
+.el-input--mini.el-date-editor.el-input{
+  width:100%;
 }
