--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -81,7 +81,7 @@ $sidebar-minimized-height:            $sidebar-minimized-width !default;
 $sidebar-compact-width:               150px !default;
 $sidebar-compact-height:              $sidebar-compact-width !default;
 $sidebar-color:                       #fff !default;
-$sidebar-bg:                          $gray-800 !default;
+$sidebar-bg:                          rgb(84, 92, 100) !default;
 $sidebar-borders:                     none !default;
 $mobile-sidebar-width:                220px !default;
 
@@ -109,7 +109,7 @@ $sidebar-nav-link-padding-y:          .75rem !default;
 $sidebar-nav-link-padding-x:          1rem !default;
 $sidebar-nav-link-color:              #fff !default;
 $sidebar-nav-link-bg:                 transparent !default;
-$sidebar-nav-link-icon-color:         $gray-600 !default;
+$sidebar-nav-link-icon-color:         rgb(144, 147, 153) !default;
 $sidebar-nav-link-borders:            0 !default;
 
 $sidebar-nav-link-hover-color:        #fff !default;
@@ -118,8 +118,8 @@ $sidebar-nav-link-hover-icon-color:   #fff !default;
 $sidebar-nav-link-hover-borders:      0 !default;
 
 $sidebar-nav-link-active-color:       #fff !default;
-$sidebar-nav-link-active-bg:          lighten($sidebar-bg, 5%) !default;
-$sidebar-nav-link-active-icon-color:  theme-color("primary") !default;
+$sidebar-nav-link-active-bg:          darken(theme-color("primary"), 10%) !default;
+$sidebar-nav-link-active-icon-color:  #fff !default;
 $sidebar-nav-link-active-borders:     0 !default;
 
 $sidebar-nav-dropdown-color:          #fff !default;
